--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 }
 
 body{
-   background-image: url("/background.jpg");
+   background-image: url("../img/background.jpg");
    background-size: cover;
    color: white;
 }
