--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,7 @@
 }
 
 body{
-   background-image: url("../img/background.jpg");
-   background-size: cover;
+   background-image: url("https://images4.alphacoders.com/117/1171030.jpg");
    color: white;
 }
 
